# data_analysis

./: .env.example  .gitignore  README.md  app.py  migrate.py  pyproject.toml  settings.py
api/: __init__.py  client.py  lifespan.py  server.py
api/models/: __init__.py  dataclass.py
api/routes/: NN01.py  __init__.py  main.py  test.py
api/static/: NN01.js
api/templates/: NN01_home.html  default.html
config/: __init__.py  api.py  server.py
csv/: test.csv
data/: __init__.py  classes.py  factors.xlsx  form.py  harvest.py  pipline.py  work.py
db/: __init__.py  async_connection.py  connection.py  connection_sync.py  migrate.py  test.db
db/models/: CSCIDS2017.py  __init__.py  testmodel.py
logs/: __init__.py  setting.py
ml/: __init__.py  main.py
ml/models/: LSTM.py  __init__.py
server/: __init__.py
